--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
-  "name": "mongoose-delete",
+  "name": "@ilechuks73/mongoose-soft-delete",
   "version": "1.0.1",
-  "description": "Mongoose soft delete plugin",
-  "author": "Sanel Deljkic <dsanel@gmail.com> (http://dsanel.github.io/)",
+  "description": "Mongoose soft delete plugin with indexed path mapping",
+  "author": "Ilechukwu Joshua <ilechuks73@gmail.com>",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --timeout 90000",
-    "test-cov": "nyc --reporter=html --reporter=text ./node_modules/mocha/bin/_mocha -- -R spec ./test/*"
+    "test": "mocha --timeout 90000"
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:dsanel/mongoose-delete.git"
+    "url": "https://github.com/ilechuks73/mongoose-delete.git"
   },
   "keywords": [
     "mongoose",
@@ -20,11 +19,6 @@
     "remove",
     "plugin"
   ],
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/dsanel/mongoose-delete/issues"
-  },
-  "homepage": "https://github.com/dsanel/mongoose-delete",
   "peerDependencies": {
     "mongoose": "5.x || 6.x || 7.x"
   },
