--- a/package.json
+++ b/package.json
@@ -19,13 +19,11 @@
     "remove",
     "plugin"
   ],
-  "peerDependencies": {
-    "mongoose": "5.x || 6.x || 7.x"
-  },
   "devDependencies": {
     "chai": "^4.3.7",
+    "dotenv": "^16.4.7",
     "mocha": "^10.2.0",
-    "mongoose": "^7.2.4",
+    "mongoose": "^8.13.1",
     "nyc": "^15.0.0"
   }
 }
